--- a/templates/main.html
+++ b/templates/main.html
@@ -255,6 +255,7 @@
         .options-container select {
             width: 100%;
         }
+        
         /* Tablet screens (768px and up) */
         @media (min-width: 768px) {
             .sidebar {
@@ -340,6 +341,10 @@
                     <option value="AR">AR</option> 
                     <option value="ARIMA">ARIMA</option> 
                     <option value="SARIMA">SARIMA</option> 
+                    <option value="SARIMAX">SARIMAX</option> 
+                    <option value="VAR">VAR</option> 
+                    <option value="VARMA">VARMA</option> 
+                    <option value="GARCH">GARCH</option>
                 </select>
                 <select id="data_length">
                     <option value="" disabled selected>Historical Data Length</option>
@@ -348,12 +353,18 @@
                     <option value="6_months">6 Months</option>
                     <option value="1_year">1 Year</option>
                     <option value="2_years">2 Years</option>
+                    <option value="3_years">3 Years</option>
+                    <option value="4_years">4 Years</option>
+                    <option value="5_years">5 Years</option>
                 </select>
                 <select id="forecast_days">
                     <option value="" disabled selected>Number of Forecast Days</option>
                     <option value="1_week">1 Week</option>
                     <option value="1_month">1 Month</option>
+                    <option value="2_months">2 Months</option>
                     <option value="3_months">3 Months</option>
+                    <option value="4_months">4 Months</option>
+                    <option value="5_months">5 Months</option>
                     <option value="6_months">6 Months</option>
                     <option value="1_year">1 Year</option>
                 </select>   
@@ -478,7 +489,7 @@
                 alert("Please select a symbol.");
                 return;
             }
-            
+
             const symbol = selectedSymbolDiv.getAttribute('data-symbol');
             const modelType = document.getElementById('model_type').value;
             const dataLength = document.getElementById('data_length').value;
@@ -505,7 +516,7 @@
             .then(data => {
                 if (data.error) {
                     alert(data.error);
-                } else {
+                } else {                   
                     const plotContainer = document.querySelector('.plot-container');
                     // Create a new image element
                     const newPlotImg = document.createElement('img');
@@ -516,8 +527,12 @@
                     plotContainer.appendChild(newPlotImg);
                 }
             })
-            .catch(error => console.error('Error:', error));
+            .catch(error => {
+                console.error('Error:', error);
+                alert('An error occurred while predicting.');
+            });
         }
+
 
         document.getElementById('symbol-name').addEventListener('keypress', function(event) {
             if (event.key === 'Enter') {
