splitted the backed.impyb into module (.py files). updated the available models, their definitions and etc.

--- a/templates/main.html
+++ b/templates/main.html
@@ -340,11 +340,10 @@
                     <option value="" disabled selected>Model Name</option>
                     <option value="AR">AR</option> 
                     <option value="ARIMA">ARIMA</option> 
-                    <option value="SARIMA">SARIMA</option> 
-                    <option value="SARIMAX">SARIMAX</option> 
-                    <option value="VAR">VAR</option> 
-                    <option value="VARMA">VARMA</option> 
+                    <option value="ES">HWES</option> 
                     <option value="GARCH">GARCH</option>
+                    <option value="UCM">UCM</option> 
+                    <option value="SARIMA">SARIMA</option> 
                 </select>
                 <select id="data_length">
                     <option value="" disabled selected>Historical Data Length</option>
