--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -220,27 +220,22 @@
                             <td class="check"></td>
                         </tr>
                         <tr>
-                            <td>SARIMA</td>
+                            <td>HWES</td>
                             <td class="check"></td>
-                            <td class="check"></td>
-                        </tr>
-                        <tr>
-                            <td>SARIMAX</td>
-                            <td class="cross"></td>
-                            <td class="check"></td>
-                        </tr>
-                        <tr>
-                            <td>VAR</td>
-                            <td class="cross"></td>
-                            <td class="check"></td>
-                        </tr>
-                        <tr>
-                            <td>VARMA</td>
-                            <td class="cross"></td>
                             <td class="check"></td>
                         </tr>
                         <tr>
                             <td>GARCH</td>
+                            <td class="cross"></td>
+                            <td class="check"></td>
+                        </tr>
+                        <tr>
+                            <td>UCM</td>
+                            <td class="cross"></td>
+                            <td class="check"></td>
+                        </tr>
+                        <tr>
+                            <td>SARIMA</td>
                             <td class="cross"></td>
                             <td class="check"></td>
                         </tr>
