ARIMA and SARIMA models are added, historical data lengths modified

--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -198,7 +198,7 @@
             </div>
         </div>
         <div class="comparison-section">
-            <h3>Account Type Comparison</h3>
+            <h3 style="text-align: center;">Account Type Comparison</h3>
             <div class="table-container">
                 <table class="comparison-table">
                     <thead>
@@ -251,23 +251,18 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>1 Month</td>
-                            <td class="check"></td>
-                            <td class="check"></td>
-                        </tr>
-                        <tr>
-                            <td>3 Months</td>
-                            <td class="check"></td>
-                            <td class="check"></td>
-                        </tr>
-                        <tr>
                             <td>6 Months</td>
                             <td class="check"></td>
                             <td class="check"></td>
                         </tr>
                         <tr>
+                            <td>9 Months</td>
+                            <td class="check"></td>
+                            <td class="check"></td>
+                        </tr>
+                        <tr>
                             <td>1 Year</td>
-                            <td class="cross"></td>
+                            <td class="check"></td>
                             <td class="check"></td>
                         </tr>
                         <tr>
