--- a/templates/main.html
+++ b/templates/main.html
@@ -340,8 +340,8 @@
                     <option value="" disabled selected>Model Name</option>
                     <option value="AR">AR</option> 
                     <option value="ARIMA">ARIMA</option> 
-                    <option value="ES">HWES</option> 
-                    <option value="GARCH">GARCH</option>
+                    <option value="HWES">HWES</option> 
+                    <option value="ARCH">ARCH</option>
                     <option value="UCM">UCM</option> 
                     <option value="SARIMA">SARIMA</option> 
                 </select>
