--- a/templates/main.html
+++ b/templates/main.html
@@ -136,7 +136,7 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            height: 25rem;
+            height: 80%;
             overflow-y: auto;
             padding: 0.5rem;
             box-sizing: border-box;
